feat(identity): user registration API
