# internal/modules/identity/interface/request.go
@@ -1,0 +1,9 @@
+package handler
+
+type createUserRequest struct {
+	FirstName string `json:"first_name" binding:"required"`
+	LastName  string `json:"last_name" binding:"required"`
+	Username  string `json:"username" binding:"required"`
+	Email     string `json:"email" binding:"required"`
+	Password  string `json:"password" binding:"required,max=72"`
+}
